# ezserial

./: .gitignore  CMakeLists.txt  Readme.md
examples/: CMakeLists.txt  read.cpp  write.cpp
include/ezserial/: ezserial.hpp
src/: mac.cpp  unix.cpp  win.cpp
tests/: CMakeLists.txt  test.cpp
